--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 
                 <div class="smallbr"></div>
 
-                In my spare time I like to play multi and singleplayer video games (currently Leauge and ToTK), watch One Piece chapter breakdowns, and passively keep up with contemporary Kpop comebacks and debuts (MiSaMo + Nmixx right now)           
+                Photo soon to come :O          
                 </b>
             </div>
 
