--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <ul>
                 <li>
                     <h3>
-                    <a href="#"> 
+                    <a href="https://drive.google.com/file/d/1v_0whrd_mPUpZaVxDUawyP03hwbAnUrA/view?usp=sharing" target="_blank"> 
                         Resume 
                     </a>
                     </h3>
