--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                 </li>
                 <li>
                     <h3>
-                    <a href="mailto: lewisdion26@gmail" target="_blank"> 
+                    <a href="mailto: dalewis@andrew.cmu.edu" target="_blank"> 
                         Email
                     </a>
                     </h3>
