added name to About.html page

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <div class="bigbr"></div>
 
                 <b>
-                I'm a junior at Carnegie Mellon University studying communication design.
+                I'm Dion, a junior at Carnegie Mellon University studying communication design.
                 As a designer, when people come in contact with my work I hope they think 
                 <br>
                 <div class="smallbr"></div>
