Added footer "built with hmtl css"

--- a/gallery/moto.html
+++ b/gallery/moto.html
@@ -236,5 +236,9 @@
                                                                              
 
         </main>
+        <div class="footer1">
+            © Dion Lewis 2023 — Built with HTML/CSS. <a href="https://github.com/ysiuz/website" target="_blank"> Github. </a>
+        </div>
+        <div class="smallbr"></div>
     </body>
    
