--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -208,6 +208,10 @@ alt="2 mockup instagram posts from the StuCo instagram account. The 2 mockups fe
         <div class="bigbr"> </div>
 
 </main>
+<div class="footer1">
+    © Dion Lewis 2023 — Built with HTML/CSS. <a href="https://github.com/ysiuz/website" target="_blank"> Github. </a>
+</div>
+<div class="smallbr"></div>
 </body>
 
        
