--- a/about.html
+++ b/about.html
@@ -106,9 +106,9 @@
                 </li> -->
             </ul>
             
-            <div class="fixbr"></div>
-
-            
+            <div class="afooter1">
+            © Dion Lewis 2023 — Built with HTML/CSS. <a href="https://github.com/ysiuz/website" target="_blank"> Github. </a>
+            </div>
         </main>
     </body>
    
