--- a/gallery/moto.html
+++ b/gallery/moto.html
@@ -239,6 +239,6 @@
         <div class="footer1">
             © Dion Lewis 2023 — Built with HTML/CSS. <a href="https://github.com/ysiuz/website" target="_blank"> Github. </a>
         </div>
-        <div class="smallbr"></div>
+        <div class="bigbr"></div>
     </body>
    
