--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -211,7 +211,7 @@ alt="2 mockup instagram posts from the StuCo instagram account. The 2 mockups fe
 <div class="footer1">
     © Dion Lewis 2023 — Built with HTML/CSS. <a href="https://github.com/ysiuz/website" target="_blank"> Github. </a>
 </div>
-<div class="smallbr"></div>
+<div class="bigbr"></div>
 </body>
 
        
