--- a/gallery/stuco.html
+++ b/gallery/stuco.html
@@ -210,7 +210,7 @@
         © Dion Lewis 2023 — Built with HTML/CSS. <a href="https://github.com/ysiuz/website" target="_blank"> Github. </a>
     </div>
    
-    <div class="smallbr"></div>
+    <div class="bigbr"></div>
     </body>
     
                         
