shrunk my "more" images.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     >
 
                     <img class="more"
-                    src="images/more/more_easter.JPG"
+                    src="images/more/more_modular.jpeg"
                     alt=""
                     >
                 
