added profile image + edited about page text + css

--- a/about.html
+++ b/about.html
@@ -42,7 +42,15 @@
                 </nav>
             </header>
 
-            <div class="hugebr"></div>
+            <div class="bigbr"> </div>
+            <div class="bigbr"> </div>
+
+            <img class="profile"
+            src="../images/profile-pic.jpeg"
+            alt="booklet spreads, a poster, and digital screen displaying my designed identity system for Shigeru Miyamoto."
+                        >
+
+            <div class="bigbr"> </div>
 
             <div class="about">
                 <h1>
@@ -53,7 +61,7 @@
 
                 <b>
                 I'm a junior at Carnegie Mellon University studying communication design.
-                As a designer, when people come in contact with my work I hope they think 
+                As a designer, when people come in contact with my work I hope they think: 
                 <br>
                 <div class="smallbr"></div>
 
@@ -65,10 +73,6 @@
                 
                 I want to help develop identities and brands that are intuitive and made with care. Design that people can understand, identify with, and hopefully cherish.
                 
-                <div class="smallbr"></div>
-
-                Photo soon to come :O          
-                </b>
             </div>
 
             <div class="bigbr"></div>
@@ -78,7 +82,7 @@
             <ul>
                 <li>
                     <h3>
-                    <a href="https://drive.google.com/file/d/1v_0whrd_mPUpZaVxDUawyP03hwbAnUrA/view?usp=sharing" target="_blank"> 
+                    <a href="https://drive.google.com/file/d/1Ml8janRAlMlE8msZ1qpBkmDT4PEGasoU/view?usp=sharing" target="_blank"> 
                         Resume 
                     </a>
                     </h3>
