made profile image smaller

--- a/index.html
+++ b/index.html
@@ -81,7 +81,34 @@
                 alt="downwards facing arrow"
                 >
             </div>
+
             <div class="hugebr"></div>
+
+            <a href="gallery/voice.html" class="anchor">
+
+                <div class="gallery">
+                        <img class="thumbnail"
+                            src="images/voice/welcome-card.png"
+                            alt="booklet spreads, a poster, and digital screen displaying my designed identity system for Shigeru Miyamoto."
+                            >
+                        <div class="thumbnail-description">
+                            <h1>
+                            That's my Voice
+                            </h1>
+                            <div class="smallbr"> </div>
+
+                                <h3>
+                                Visual System
+                                </h3>
+                                <div class="smallbr"> </div>
+                                    <b>
+                                        Using a set of cards to explore the nuance and beauty in every voice, human or AI,
+                                    </b>
+                        </div>
+                </div>
+            </a>
+
+            <div class="thumbnail-br"></div>
 
             <a href="gallery/moto.html" class="anchor">
 
@@ -155,6 +182,8 @@
                         </div>
                 </div>
             </a>
+
+            <div class="thumbnail-br"></div>
 
             
             <div class="hugebr"> </div>
