completed the voice page

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 </h3>
                                 <div class="smallbr"> </div>
                                     <b>
-                                        Using a set of cards to explore the nuance and beauty in every voice, human or AI,
+                                        Designing a set of cards to explore the power, stupidity, and beauty in every voice — whether human or AI.
                                     </b>
                         </div>
                 </div>
