added more process in general + play page

--- a/gallery/stuco.html
+++ b/gallery/stuco.html
@@ -32,6 +32,15 @@
                         <li>
                             <div class="about">
                             <h3>
+                            <a href="../play.html"> 
+                                Play
+                            </a>
+                            </h3>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="about">
+                            <h3>
                             <a href="../about.html"> 
                                 About
                             </a>
