--- a/gallery/voice.html
+++ b/gallery/voice.html
@@ -32,6 +32,15 @@
                         <li>
                             <div class="about">
                             <h3>
+                            <a href="../play.html"> 
+                                Play
+                            </a>
+                            </h3>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="about">
+                            <h3>
                             <a href="../about.html"> 
                                 About
                             </a>
@@ -148,6 +157,29 @@
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/875817033??rel=0&controls=0&showinfo=0&autoplay=1&loop=1&playlist=VIDEO_IDbadge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="stuco-test"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
             <div class="bigbr"> </div>
+
+            <div class="meat">
+                And here's all the card's put together on my desk. I really love the way some sides of the tower feel cohesive and gridded, whereas other sides do not. It feels like an accurate represenation of a messy choir of voices of speaking and singing at the same time. Speaking of messy, please ingore my desk :O
+                </div>
+
+
+            <div class="bigbr"> </div>
+
+
+            <div class="more">
+                <img class="more"
+                    src="../../images/voice/tower-1.jpg"
+                    alt="tower of cards, stacked 5 cards high" >
+                <img class="more"
+                    src="../../images/voice/tower 2.jpg"
+                    alt="tower of cards, stacked 5 cards high" >
+                <img class="more"
+                    src="../../images/voice/tower-3.jpg"
+                    alt="tower of cards, stacked 5 cards high" >
+            </div>
+
+            
+            <div class="bigbr"> </div>
             <div class="bigbr"> </div>
 
 
@@ -251,13 +283,11 @@
                             src="../../images/voice/front-case.png"
                             alt="Timeline of stuco logo progression from previous, black and white logo where the letters STUCO were pillars in a building, to the current logo where stu and co are on separate red and yellow sticky notes. ."
                             >
-
-            <img class="meat"
+                <img class="meat"
                             src="../../images/voice/top-case.png"
                             alt="Timeline of stuco logo progression from previous, black and white logo where the letters STUCO were pillars in a building, to the current logo where stu and co are on separate red and yellow sticky notes. ."
                             >
 
-            <div class="bigbr"></div>
             <div class="bigbr"></div>
 
             <div class="meat">
