--- a/about.html
+++ b/about.html
@@ -18,28 +18,38 @@
     <body>
         <main>
             <header>
-                <nav>
-                    <ul>
-                        <li>
-                            <div class="stuff">
-                            <h3>
-                            <a href="index.html"> 
-                                Stuff 
-                            </a>
-                            </h3>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="about">
-                            <h3>
-                            <a href="#"> 
-                                About
-                            </a>
-                            </h3>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
+                    
+                                <nav>
+                                    <ul>
+                                        <li>
+                                            <div class="stuff">
+                                            <h3>
+                                            <a href="index.html"> 
+                                                Stuff 
+                                            </a>
+                                            </h3>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="about">
+                                            <h3>
+                                            <a href="play.html"> 
+                                                Play
+                                            </a>
+                                            </h3>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="about">
+                                                <h3>
+                                                <a href="about.html"> 
+                                                About
+                                                </a>
+                                                </h3>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </nav>
             </header>
 
             <div class="bigbr"> </div>
