--- a/gallery/moto.html
+++ b/gallery/moto.html
@@ -262,7 +262,7 @@
                                                 <div class="meat">
 
                                                 <b>
-                                                    I had a lot of fun prototypying at full-scale, first simply with tape and whiteboard markers, but later witgh projections. It gave me a lot of confidence knowing exactly how my protoype would look to someone, whther they were my height, or kneeling, or even a 4 ft tall child.
+                                                    I had a lot of fun prototypying at full-scale, first simply with tape and whiteboard markers, but later with projections. It gave me a lot of confidence knowing how someone would physically interact with my digital prototype, whether they were my height or not.
                                                 </b>
                                                 </div>
 
