added leave no one off the map for real

--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
 
             <div class="thumbnail-br"></div>
 
-            
-            <a href="#" class="anchor">
+
+            <a href="gallery/broadband.html" class="anchor">
 
                 <div class="gallery">
                         <img class="thumbnail"
-                            src="images/voice/welcome-card.png"
-                            alt="booklet spreads, a poster, and digital screen displaying my designed identity system for Shigeru Miyamoto."
+                            src="images/broadband/welcome.png"
+                            alt="white map, on a blue field, with a white wifi symbol at the centre"
                             >
                         <div class="thumbnail-description">
                             <h1>
-                            Leave No One Off The Map ONGOING*
+                            Leave No One Off The Map
                             </h1>
                             <div class="smallbr"> </div>
 
@@ -219,6 +219,10 @@
                 </div>
             </a>
 
+
+
+
+           
 
             <div class="bigbr"> </div>
             <div class="bigbr"> </div>
