--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                         <div class="thumbnail-description">
                             <h1>
                             Leave No One Off The Map
+                            ONGOING*
                             </h1>
                             <div class="smallbr"> </div>
 
