changed about + shrunk images

--- a/gallery/broadband.html
+++ b/gallery/broadband.html
@@ -72,11 +72,11 @@
                             <b>
                                 
                             <b>
-                            Roughly 325,000 businesses, homes, and other establishments lack high-speed internet access in Pennsylvania. The vast majority of these people live within unserved, often overlooked rural communities.
+                            Roughly 325,000 businesses, homes, and other establishments lack high-speed internet access in Pennsylvania. The vast majority of these people live within underserved, often overlooked rural communities.
 
                             <div class="smallbr"> </div>
 
-                            My goal was to propose a potential design system that could speak to rural communities and bolster ongoing efforts to close Pennsylvania's digital divide.
+                            My goal was to propose a potential design system that can speak to rural communities and bolster ongoing efforts to close Pennsylvania's digital divide.
 
                             
                             </b>
