got rid of opening message, added dion lewis tonav

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                                         <li>
                                             <h3>
                                             <a href="index.html"> 
-                                                Stuff 
+                                                Dion Lewis
                                             </a>
                                             </h3>
                                         </li>
@@ -56,13 +56,13 @@
 
             <div class="about">
                 <h1>
-                Hi again!
+                Hello there!
                 </h1>
 
                 <div class="bigbr"></div>
 
                 <b>
-                I'm a junior studying Communications Design at Carnegie Mellon University. 
+                I'm Dion, a junior studying Communications Design at Carnegie Mellon University. 
                 
                 <div class ="smallbr"></div>
 
