--- a/gallery/stuco.html
+++ b/gallery/stuco.html
@@ -24,7 +24,7 @@
                             <div class="stuff">
                             <h3>
                             <a href="../index.html"> 
-                                Stuff 
+                            Dion Lewis 
                             </a>
                             </h3>
                             </div>
