--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -25,7 +25,7 @@
                             <div class="stuff">
                             <h3>
                             <a href="../index.html"> 
-                                Stuff 
+                                Dion Lewis 
                             </a>
                             </h3>
                             </div>
