partway through broadband update

--- a/index.html
+++ b/index.html
@@ -131,7 +131,37 @@
                         </div>
                 </div>
             </a>
-                        <div class="thumbnail-br"></div>
+
+            <div class="thumbnail-br"></div>
+
+
+            <a href="gallery/broadband.html" class="anchor">
+
+                <div class="gallery">
+                        <img class="thumbnail"
+                            src="images/broadband/welcome.png"
+                            alt="white map, on a blue field, with a white wifi symbol at the centre"
+                            >
+                        <div class="thumbnail-description">
+                            <h1>
+                            Leave No One Off The Map
+                            </h1>
+                            <div class="smallbr"> </div>
+
+                                <h3>
+                                Campaign Design
+                                </h3>
+                                <div class="smallbr"> </div>
+                                    <b>
+                                        Public service campaign communicating the importance of high-speed internet, especially in overlooked rural communities.
+                                    </b>
+                        </div>
+                </div>
+            </a>
+
+            <div class="thumbnail-br"></div>
+
+
 
             <a href="gallery/voice.html" class="anchor">
 
@@ -201,34 +231,6 @@
                                 <div class="smallbr"> </div>
                                     <b>
                                         Explanatory motion graphics designed to accompany the voice of a Tuvan storyteller.
-                                    </b>
-                        </div>
-                </div>
-            </a>
-
-            <div class="thumbnail-br"></div>
-
-
-            <a href="gallery/broadband.html" class="anchor">
-
-                <div class="gallery">
-                        <img class="thumbnail"
-                            src="images/broadband/welcome.png"
-                            alt="white map, on a blue field, with a white wifi symbol at the centre"
-                            >
-                        <div class="thumbnail-description">
-                            <h1>
-                            Leave No One Off The Map
-                            ONGOING*
-                            </h1>
-                            <div class="smallbr"> </div>
-
-                                <h3>
-                                Public Service Campaign
-                                </h3>
-                                <div class="smallbr"> </div>
-                                    <b>
-                                        Public service campaign communicating the importance of high-speed internet, especially in overlooked rural communities.
                                     </b>
                         </div>
                 </div>
