updated spoken word

--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
                             <div class="smallbr"> </div>
 
                                 <h3>
-                                Motion 
+                                Visual System
                                 </h3>
                                 <div class="smallbr"> </div>
                                     <b>
-                                        Explanatory motion graphics designed to accompany the voice of a Tuvan storyteller.
+                                        Explanatory motion graphics and print designed to accompany the voice of a Tuvan storyteller.
                                     </b>
                         </div>
                 </div>
