made nav + opaque, not done yet on nav

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             </header>
 
             <div class="thumbnail-br"></div>
+            <div class="bigbr"></div>
+            <div class="bigbr"></div>
+
 
 
             <a href="gallery/moto.html" class="anchor">
