crunching miyamoto photos

--- a/gallery/moto.html
+++ b/gallery/moto.html
@@ -279,7 +279,7 @@
                                                             src="../../images/moto/kiosk-2.jpg"
                                                             alt="potential poster direction, witha  different composition but same coloring" >
                                                     <img class="more"
-                                                            src="../../images/moto/kiosk-3.jpg"
+                                                            src="../../images/moto/kiosk.gif"
                                                             alt="tower of cards, stacked 5 cards high" >
                                                     
                                                  </div>
