messign with latop sizing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Communications Design
                         & Social and Political History 
                         at Carnegie Mellon University (CMU). Currently interning at SGK. <br>
-                        <a href="#">Click for all work∞</a>. <a href="about.html">About me☢</a>.  
+                        <a href="#">All ∞ work</a>. <a href="about.html">About ☢ me</a>.  
                         <br> <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26gmail.com↗</a>.
                         <a href="#" target="_blank">Resume↗</a>. 
                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.  <br>
