editing text flow and nav

--- a/about.html
+++ b/about.html
@@ -43,8 +43,9 @@
                                         <a href="#" target="_blank">Resume↗</a>. 
                                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
                                         <br>
-                                        <a href="index.html">Selected ☁ work</a>.
-                                        <a href="#">All ∞ work</a>. 
+                                        <a href="index.html">☁Dion</a>.
+                                        <a href="#">∞Work</a>. 
+                                        ☺About.
                                         
 
 
