getting rid of unecessary breaks

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                                 <nav>
                                     <h1>
                                         Hi again, I am Dion! Currently I’m in my final year studying 
-                                        Communications Design & Social and Political History at Carnegie Mellon <br> 
+                                        Communications Design & Social and Political History at Carnegie Mellon
                                         University. As a graphic designer I’m interested in developing visual <br> 
                                         systems that tell people’s stories with care and intent.<br>
                                         <br>
