fixed about breaks

--- a/about.html
+++ b/about.html
@@ -22,16 +22,16 @@
                                     <h1>
                                         Hi again, I am Dion! Currently I’m in my final year studying 
                                         Communications Design & Social and Political History at Carnegie Mellon
-                                        University. As a graphic designer I’m interested in developing visual <br> 
+                                        University. As a graphic designer I’m interested in developing visual 
                                         systems that tell people’s stories with care and intent.<br>
                                         <br>
                                         As a person however, I’d describe myself as a big
-                                        <a href="https://www.youtube.com/watch?v=1rWfyj4caRg“lore”" target="_blank">"lore"</a> guy, a lover <br>
+                                        <a href="https://www.youtube.com/watch?v=1rWfyj4caRg“lore”" target="_blank">"lore"</a> guy, a lover 
                                         of 
-                                        <a href="https://www.youtube.com/watch?v=LLmbURvGwj8" target="_blank">Metroidvanias </a>and adventure video games, a shameless fan of <br> 
+                                        <a href="https://www.youtube.com/watch?v=LLmbURvGwj8" target="_blank">Metroidvanias </a>and adventure video games, a shameless fan of 
                                         <a href="https://www.youtube.com/watch?v=Bqwz3EQeljk" target="_blank">youtube reactions</a>, 
                                         a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>, a huge fan of 
-                                        <a href="https://www.carnegielibrary.org/public" target="_blank"> public <br>institutions</a>, and a long-winded, overly theatrical character.
+                                        <a href="https://www.carnegielibrary.org/public" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character.
                                         <br> 
                                         <br> 
                                         If you want to talk more about something I’ve made, or have an idea that
