--- a/about.html
+++ b/about.html
@@ -20,18 +20,20 @@
                     
                                 <nav>
                                     <h1>
-                                        Hi again, I am Dion! Currently I’m in my final year studying 
-                                        Communications Design & Social and Political History at Carnegie Mellon
-                                        University. As a graphic designer I’m interested in developing visual 
-                                        systems that tell people’s stories with care and intent.<br>
+                                        Hi again! I am Dion, a designer interested in developing visual 
+                                        systems that tell people’s stories with care and intent. Right now I'm a student of
+                                        <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Communications Design↗</a> 
+                                        & <a href="http://coursecatalog.web.cmu.edu/schools-colleges/dietrichcollegeofhumanitiesandsocialsciences/departmentofhistory/#minorinhistorytextcontainer
+                                        " target="_blank">Social and Political History↗</a> at Carnegie Mellon
+                                        University, and a Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.  <br>
                                         <br>
-                                        As a person however, I’d describe myself as a big
-                                        <a href="https://www.youtube.com/watch?v=1rWfyj4caRg“lore”" target="_blank">"lore"</a> guy, a lover 
+                                        Personally, I’d describe myself as a big
+                                        <a href="https://www.youtube.com/watch?v=1rWfyj4caRg" target="_blank">"lore"</a> guy, a lover 
                                         of 
-                                        <a href="https://www.youtube.com/watch?v=LLmbURvGwj8" target="_blank">Metroidvanias </a>and adventure video games, a shameless fan of 
+                                        <a href="https://www.youtube.com/watch?v=LLmbURvGwj8" target="_blank">Metroidvanias</a> and adventure videogames, a shameless consumer of 
                                         <a href="https://www.youtube.com/watch?v=Bqwz3EQeljk" target="_blank">youtube reactions</a>, 
                                         a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>, a huge fan of 
-                                        <a href="https://www.carnegielibrary.org/public" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character.
+                                        <a href="https://www.carnegielibrary.org/" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character.
                                         <br> 
                                         <br> 
                                         If you want to talk more about something I’ve made, or have an idea that
@@ -44,8 +46,9 @@
                                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
                                         <br>
                                         <a href="index.html">☁Dion</a>.
-                                        <a href="#">∞Work</a>. 
+                                        <a href="#">🔥Work</a>. 
                                         ☺About.
+
                                         
 
 
