minor about change ugh ;/

--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
                                 <nav>
                                     <h1>
                                         Hi again! I am Dion, a designer interested in developing visual 
-                                        systems that tell people’s stories with care and intent. Right now I'm a student of
+                                        systems that tell people’s stories with care and intent. Right now I study
                                         <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Communications Design↗</a> 
                                         & <a href="http://coursecatalog.web.cmu.edu/schools-colleges/dietrichcollegeofhumanitiesandsocialsciences/departmentofhistory/#minorinhistorytextcontainer
                                         " target="_blank">Social and Political History↗</a> at Carnegie Mellon
-                                        University, and a Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.  <br>
+                                        University, and am a Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.  <br>
                                         <br>
-                                        Personally, I’d describe myself as a big
+                                        I’d describe myself as a big
                                         <a href="https://www.youtube.com/watch?v=1rWfyj4caRg" target="_blank">"lore"</a> guy, a lover 
                                         of 
                                         <a href="https://www.youtube.com/watch?v=LLmbURvGwj8" target="_blank">Metroidvanias</a> and adventure videogames, a shameless consumer of 
