--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                                         <a href="#" target="_blank">Resume↗</a>. 
                                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
                                         <br>
-                                        <a href="index.html">☁Dion</a>.
+                                        <a href="index.html">☁Home</a>.
                                         <a href="#">🔥Work</a>. 
                                         ☺About.
                                     </h1>
