changing typeface for body, h3, h4

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <!-- this makes the site work better with microsoft browsers -->
     <title>Dion Lewis - Stuff </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Epilogue&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/klq3odn.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   
 
+    
 </head>
 
     <body>
@@ -24,7 +26,7 @@
                         Hello there! I'm Dion, a graphic designer currently studying  
                         Communications Design
                         & Social and Political History 
-                        at Carnegie Mellon University (CMU). Presently a Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.<br>
+                        at Carnegie Mellon University (CMU). Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.<br>
                        ☁Home. <a href="#">🔥Work</a>. <a href="about.html">☺About </a>.  
                         <br> <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26gmail.com↗</a>.
                         <a href="#" target="_blank">Resume↗</a>. 
