made text better, hover states noticeable

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <div class="bigbr"></div>
             <div class="image-gallery">
                 <img class="project" src="images/lewis-dion_profile-pic.JPG">
-                
+                <div class="hugebr"></div>
             </div> 
         </main>
 
