fixed about page

--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
                                         <br>
                                         Personally, I'd describe myself as a big
                                         <a href="https://www.youtube.com/watch?v=1rWfyj4caRg" target="_blank">"lore"</a> guy, a lover 
-                                        of 
-                                        <a href="https://www.youtube.com/watch?v=LLmbURvGwj8" target="_blank">Metroidvanias</a> and adventure videogames,
+                                        of <br>
+                                        <a href="https://www.youtube.com/watch?v=xaZ1qCnIEtw" target="_blank">Metroidvanias</a>  and adventure vieogames,
                                         a shameless consumer of <a href="https://www.youtube.com/watch?v=yMLYNzNd3fk" target="_blank">youtube reactions</a>,
                                         a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>, a huge fan of 
                                         <a href="https://www.carnegielibrary.org/" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character.
