cut work for now, added footer, added resume.

--- a/about.html
+++ b/about.html
@@ -39,11 +39,11 @@
                                         
 
                                         <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26gmail.com↗</a>.
-                                        <a href="#" target="_blank">Resume↗</a>. 
+                                        <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
                                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
                                         <br>
                                         <a href="index.html">☁Home</a>.
-                                        <a href="#">🔥Work</a>. 
+                                        <!-- <a href="#">🔥Work</a>.  -->
                                         ☺About.
                                     </h1>
                                 </nav>
