about and index text changes

--- a/about.html
+++ b/about.html
@@ -21,17 +21,20 @@
                     
                                 <nav>
                                     <h1>
-                                        Hi again! I'm Dion, a Canadian designer interested in developing visual 
-                                        systems that tell people’s stories with care. Right now I study
+                                        Hi again! I'm Dion, a Canadian designer interested in telling compelling visual stories. Right now I study
                                         <a href="https://design.cmu.edu/about-our-programs/undergraduate-degrees/communications" target="_blank">Communications Design↗</a> 
-                                        & <a href="http://coursecatalog.web.cmu.edu/schools-colleges/dietrichcollegeofhumanitiesandsocialsciences/departmentofhistory/#minorinhistorytextcontainer
-                                        " target="_blank">Social and Political History↗</a> at CMU in Pittsburgh. Currently I also work as a Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>, and as a Graphic Design intern at <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU's Office of SLICE↗</a>.  <br>
+                                        & Social and Political History at Carnegie Mellon University in Pittsburgh.
+                                        <br>
+
+                                        <br> → Currently, Graphic Design Intern at <a href="https://www.cmu.edu/student-affairs/slice/" target="_blank">CMU's Office of SLICE↗</a>.  
+                                        <br> → Previously, Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.
+                                        <br>
                                         <br>
                                         Personally, I'd describe myself as a big
                                         <a href="https://www.youtube.com/watch?v=1rWfyj4caRg" target="_blank">"lore"</a> guy, a lover 
                                         of <br>
-                                        <a href="https://www.youtube.com/watch?v=xaZ1qCnIEtw" target="_blank">Metroidvanias</a>  and adventure vieogames,
-                                        a shameless consumer of <a href="https://www.youtube.com/watch?v=yMLYNzNd3fk" target="_blank">youtube reactions</a>,
+                                        <a href="https://www.youtube.com/watch?v=SE7kje3z9c8" target="_blank">Metroidvanias</a>  and <a href="https://www.youtube.com/watch?v=SE7kje3z9c8" target="_blank">adventure videogames</a>
+                                        a shameless consumer <br> of <a href="https://www.youtube.com/watch?v=Cx8TJ-qM1BU" target="_blank">youtube reactions</a>,
                                         a niche meme <a href="https://www.youtube.com/watch?v=qdLh1DG8F3s&list=WL&index=57" target="_blank">connoisseur</a>, a huge fan of 
                                         <a href="https://www.carnegielibrary.org/" target="_blank"> public institutions</a>, and a long-winded, overly theatrical character.
                                         <br> 
@@ -54,6 +57,8 @@
             <div class="hugebr"></div>
             <div class="hugebr"></div>
             <div class="hugebr"></div>
+            <div class="smallbr"></div>
+
 
         <main>
             <div class="bigbr"></div>
