--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                         Hello there! I'm Dion, a graphic designer currently studying  
                         Communications Design
                         & Social and Political History 
-                        at Carnegie Mellon University (CMU). Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.<br>
+                        at Carnegie Mellon University. 
+                        Previously, Tech Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a>.
+                        <br>
+
                        ☁Home. 
                        <!-- <a href="#">🔥Work</a>.  -->
                        <a href="about.html">☺About</a>.  
