--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                                         <br> 
                                         
 
-                                        <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26gmail.com↗</a>.
+                                        <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
                                         <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
                                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.
                                         <br>
