--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                        <!-- ☁Home.  -->
                        <!-- <a href="#">🔥Work</a>.  -->
                        <!-- <a href="about.html">☺About</a>.   -->
-                        <br> <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26gmail.com↗</a>.
+                        <br> <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
                         <a href="https://drive.google.com/file/d/1fVKLcRBECmC0uHjKI97bKaDrA1WNRsC-/view?usp=sharing" target="_blank">Resume↗</a>. 
                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>.  <br>
 
