noodling on stuco

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <a href="#"><img class="project" src="images/liminal-01.png">
             
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h3>Designing a print identity for fashion in the space between. </h3> <br> <h4>Print Identity</h4><br> </div> 
+                    <div class="project-descriptions"> <h3>Designing a print identity for fashion in the worlds between. </h3> <br> <h4>Print Identity</h4><br> </div> 
                 </a>
             </div> 
             
