updating stone as we go

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <a href="gallery/stone.html"><img class="project" src="images/stone/photography/IMG_2934.JPG">
 
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h3> Retelling a church's story with a focus on community.</h3> <br> <h4>Editorial Design</h4><br> </div> 
+                    <div class="project-descriptions"> <h3> Retelling a church's story with a focus on community.</h3> <br> <h4>Editorial</h4><br> </div> 
                 </a>
             </div> 
 
