--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -110,7 +110,7 @@
             <!-- start of image dump/content -->
 
            <div class="welcome-container">
-                <img class="full-content" src="../../images/stone/photography/full-context.jpg">
+                <img class="full-content" src="../../images/stone/photography/full-context.JPG">
            </div>
 
            <div class="smallbr"></div>
