temp subtraction of images

--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -113,7 +113,7 @@
                 <img class="full-content" src="../../images/stone/photography/full-context.JPG">
            </div>
 
-           <div class="smallbr"></div>
+           <!-- <div class="smallbr"></div>
 
             <div class="container-2">
                 <div class="content-box1">
@@ -122,7 +122,7 @@
                 <div class="content-box1">
                     <img class="full-content" src="../../images/stone/scans/1-inner-cover.jpg"> 
                 </div>
-            </div>
+            </div> -->
                    
 
                    
