--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- the meta viewport tag makes this site responsive -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- this makes the site work better with microsoft browsers -->
-    <title>Dion Lewis - Stuff </title>
+    <!-- this makes th- Stuffe site work better with microsoft browsers -->
+    <title>diondesigns.me</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
