added liminal photo plus sgk tagline

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
             <div class="hugebr"></div>
 
-            <div class="#">
-                <a href="gallery/sgk.html"><img class="project" src="images/SGK_Logo.png">
+            <div class="image-gallery">
+                <a href="https://sgkinc.com/en/" target="_blank"><img class="project" src="images/SGK_Logo.png">
                     <div class="smallbr"></div>
-                    <div class="project-descriptions"> <h3>Executing design intent to connect brands with consumers.</h3> <br> <h4>Tech Design Internship</h4><br> </div> 
+                    <div class="project-descriptions"> <h3>Executing design intent for Nike & DICK'S Sporting Goods.</h3> <br> <h4>Tech Design Internship</h4><br> </div> 
                 </a>
             </div> 
 
@@ -143,7 +143,7 @@
 
      
             <div class="image-gallery">
-                <a href="#"><img class="project" src="images/liminal-01.png">
+                <a href="#"><img class="project" src="images/liminal/full-cover-edit.png">
             
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> <h3>Designing a print identity for fashion in the worlds between. </h3> <br> <h4>Print Identity</h4><br> </div> 
